Closed
Bug 617813
Opened 12 years ago
Closed 12 years ago
"ASSERTION: does it make sense to Resize() a disabled or hidden widget?" in PuppetWidget
Categories
(Core :: Widget, defect)
Core
Widget
Tracking
()
RESOLVED
FIXED
People
(Reporter: cjones, Assigned: cjones)
References
Details
Attachments
(1 file)
1010 bytes,
patch
|
roc
:
review+
roc
:
approval2.0+
|
Details | Diff | Splinter Review |
I left this pseudo-assertion in as a TODO, since I didn't understand whether this was valid when I wrote the code. It happens in the wild, doesn't seem to cause issues, and glancing at the gtk2 and windows backends, seems to be generally supported. So I'll just remove the pseudo-assertion.
Assignee | ||
Comment 1•12 years ago
|
||
Assignee: nobody → jones.chris.g
Attachment #496371 -
Flags: review?(roc)
Attachment #496371 -
Flags: review?(roc)
Attachment #496371 -
Flags: review+
Attachment #496371 -
Flags: approval2.0+
Assignee | ||
Comment 2•12 years ago
|
||
http://hg.mozilla.org/mozilla-central/rev/94d5e1a68f55
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•