Bug 617813: Remove a pseudo-assertion about a state that seems allowable. r=roc a=a